--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Week 6</title>
         <meta charset="utf-8">
+        <link href="css/stylesheet.css" rel="stylesheet">
 
     </head>
     <body>
